final update of the Changelog
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1048 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,4 @@
-Version 0.5 - UNRELEASED
+Version 0.5 - 2011-03-28
  * Toolpaths:
   * added adaptive positioning for DropCutter strategy (improves precision)
   * allow conventional/climb milling style for ContourFollow and Engrave strategies
