added extrusion for 2D models
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1053 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+Version 0.6 - UNRELEASED
+ * added extrusion for 2D models
+
 Version 0.5 - 2011-03-28
  * Toolpaths:
   * added adaptive positioning for DropCutter strategy (improves precision)
