finalized bezier support for DXF polylines
git-svn-id: https://pycam.svn.sourceforge.net/svnroot/pycam/trunk@1208 bbaffbd6-741e-11dd-a85d-61de82d9cad9

--- a/Changelog
+++ b/Changelog
@@ -1,5 +1,7 @@
 Version 0.6 - UNRELEASED
  * greatly improved OpenGL visualization (contributed by Mattes)
+ * DXF importer:
+  * added bezier support for POLYLINE and LWPOLYLINE
 
 Version 0.5.1 - 2011-06-13
  * added extrusion for 2D models
