remove support for ODE
The ODE library seems to be not actively developed for some years.
This collision detection engine was not the default choice in PyCAM due
to a few collision detection problems. Thus the removal should do no
harm and help remove some cruft code.

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version ?
+ * removed experimental support for ODE
+  * the ODE library seems to be not actively developed anymore
+
 Version 0.6.0 - 2016-02-18
  * greatly improved OpenGL visualization (contributed by Mattes)
  * DXF importer:
