limit the feedrate of downward moves
An additional GCode setting allows to limit the feedrate of (partial or
fully) downward moves. This allows to use different feedrates for
horizontal and vertical moves.

Closes: #24

--- a/Changelog
+++ b/Changelog
@@ -1,4 +1,5 @@
 Version ?
+ * GCode: limit vertical feedrate (maximum speed of plunge move)
  * removed experimental support for ODE
   * the ODE library seems to be not actively developed anymore
 
