--- a/INSTALL.TXT
+++ b/INSTALL.TXT
@@ -43,10 +43,9 @@ Install the following packages with your package manager:
     python-opengl
     python-gtkglext1
     python-setproctitle (optional)
-    python-psyco        (optional)
 
 On a debian or ubuntu system you would just type the following in a root console:
-    apt-get install python-gtkglext1 python-opengl python-gtk2 python-setproctitle python-psyco
+    apt-get install python-gtkglext1 python-opengl python-gtk2 python-setproctitle
 Please note that you need to enable the "universe" repository in Ubuntu.
 
 BEWARE: Debian "Lenny" and Ubuntu "Jaunty" (maybe also Dapper/Hardy/Intrepid)
