--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,7 @@
+Version 0.6.2 - ???
+ * Bounds: disable percent-based controls for zero-dimensions
+ * fix toolpath grid operation (issue #45)
+
 Version 0.6.1 - 2017-03-11
  * GCode: limit vertical feedrate (maximum speed of plunge move)
  * removed experimental support for ODE
