--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,11 @@
+Version 0.6.3 - ???
+ * Fix import of DXF files with full-circle holes (github #112).
+ * Fix import of DXF files with bezier curves (github #116).
+ * Fix import of DXF with closed LWPOLYLINE.
+ * Fix line number reporting in CXFImporter.
+ * Fix python2/3 compatibility in CXFImporter.
+ * Better tests.
+
 Version 0.6.2 - 2017-10-27
  * Bounds: disable percent-based controls for zero-dimensions
  * fix toolpath grid operation (issue #45)
