--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pycam (0.6.4) unstable; urgency=medium
+
+  * Allow direct import of SVG files (without inkscape/pstoedit)
+  * Improve accuracy when importing non-straight lines
+  * Fix handling of missing OpenGL support
+  * Update package dependencies
+
+ -- Lars Kruse <devel@sumpfralle.de>  Sun, 28 Jul 2019 15:33:55 +0200
+
 pycam (0.6.3) unstable; urgency=medium
 
   * DXFImporter: fix handling of closed LWPOLYLINE
