--- a/INSTALL.TXT
+++ b/INSTALL.TXT
@@ -42,10 +42,11 @@ Install the following packages with your package manager:
     python-gtk2
     python-opengl
     python-gtkglext1
+    python-svg.path
     python-setproctitle (optional)
 
 On a debian or ubuntu system you would just type the following in a root console:
-    apt-get install python-gtkglext1 python-opengl python-gtk2 python-setproctitle
+    apt-get install python-gtkglext1 python-opengl python-gtk2 python-setproctitle python-svg.path
 Please note that you need to enable the "universe" repository in Ubuntu.
 
 BEWARE: Debian "Lenny" and Ubuntu "Jaunty" (maybe also Dapper/Hardy/Intrepid)
